--- a/index.html
+++ b/index.html
@@ -9,11 +9,62 @@
   </head>
   <body>
     <div class="container">
-      <div class="header">header</div>
-      <div class="info">info</div>
-      <div class="qoute">qoute</div>
-      <div class="cta">call to action</div>
-      <div class="footer">footer</div>
+      <div class="header">
+        <div class="top">
+          <div class="logo">Header Logo</div>
+          <div class="links">
+            <div class="link">1</div>
+            <div class="link">2</div>
+            <div class="link">3</div>
+          </div>
+        </div>
+        <div class="herocontainer">
+          <div class="signup">
+            <div class="title">hello</div>
+            <div class="message">herro</div>
+            <div class="signbtn">Sign Up</div>
+          </div>
+          <div class="image">me</div>
+        </div>
+      </div>
+      <div class="info">
+        <div class="info-title">Some Random Information</div>
+        <div class="thumbnails">
+          <div class="pic">
+            <img src="" alt="" />
+            <p>this is text</p>
+          </div>
+          <div class="pic">
+            <img src="" alt="" />
+            <p>this is text</p>
+          </div>
+          <div class="pic">
+            <img src="" alt="" />
+            <p>this is text</p>
+          </div>
+          <div class="pic">
+            <img src="" alt="" />
+            <p>this is text</p>
+          </div>
+        </div>
+      </div>
+      <div class="qoute">
+        <div class="qoutes">
+          <p>this is me</p>
+        </div>
+        <div class="signature">
+          <p>Thor</p>
+        </div>
+      </div>
+      <div class="cta">
+        <div class="ctabox">
+          <div class="tagline">herro</div>
+          <div class="tagbtn">Sign up</div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="odin-footer">dis is me</div>
+      </div>
     </div>
   </body>
 </html>
