--- a/index.html
+++ b/index.html
@@ -13,57 +13,66 @@
         <div class="top">
           <div class="logo">Header Logo</div>
           <div class="links">
-            <div class="link">1</div>
-            <div class="link">2</div>
-            <div class="link">3</div>
+            <div class="link">header link one</div>
+            <div class="link">header link two</div>
+            <div class="link">header link three</div>
           </div>
         </div>
         <div class="herocontainer">
           <div class="signup">
-            <div class="title">hello</div>
-            <div class="message">herro</div>
-            <div class="signbtn">Sign Up</div>
+            <div class="title">This website is awesome</div>
+            <div class="message">
+              This website has some subtext that goes here under the main title.
+              it's smaller font and the color is lower contrast
+            </div>
+            <div class="btn"><button class="signbtn">Sign Up</button></div>
           </div>
-          <div class="image">me</div>
+          <div class="image"><img src="" alt="" />place holder for image</div>
         </div>
       </div>
       <div class="info">
-        <div class="info-title">Some Random Information</div>
+        <div class="info-title">Some random information.</div>
         <div class="thumbnails">
           <div class="pic">
-            <img src="" alt="" />
+            <img class="box" src="" alt="" />
             <p>this is text</p>
           </div>
           <div class="pic">
-            <img src="" alt="" />
+            <img class="box" src="" alt="" />
             <p>this is text</p>
           </div>
           <div class="pic">
-            <img src="" alt="" />
+            <img class="box" src="" alt="" />
             <p>this is text</p>
           </div>
           <div class="pic">
-            <img src="" alt="" />
+            <img class="box" src="" alt="" />
             <p>this is text</p>
           </div>
         </div>
       </div>
       <div class="qoute">
         <div class="qoutes">
-          <p>this is me</p>
+          <p>
+            This is an inspiring quote, or a testiomnial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </p>
         </div>
         <div class="signature">
-          <p>Thor</p>
+          <p>-Thor, God of Thunder</p>
         </div>
       </div>
       <div class="cta">
         <div class="ctabox">
-          <div class="tagline">herro</div>
+          <div class="tagline">Call to action!</div>
           <div class="tagbtn">Sign up</div>
         </div>
       </div>
       <div class="footer">
-        <div class="odin-footer">dis is me</div>
+        <div class="odin-footer">
+          <p>Copyright @ The Odin Project 2021</p>
+        </div>
       </div>
     </div>
   </body>
